updated git urls in api.html

--- a/api.html
+++ b/api.html
@@ -18,8 +18,8 @@
 
 <p>
 Check: <a href="demo.html">Demo</a> &nbsp;
-<a href="demo.html">Github</a><br />
-Download: <a href="demo.html">Minified</a><small>(5kb)</small> &nbsp; <a href="demo.html">Source</a>
+<a href="https://github.com/scazzy/Popelt">Github</a><br />
+Download: <a href="https://github.com/scazzy/Popelt/blob/master/minified/popelt-v1.0.min.js">Minified</a><small>(5kb)</small> &nbsp; <a href="https://github.com/scazzy/Popelt/blob/master/source/popelt-v1.0-source.js">Source</a>
 </p>
 <hr/>
 
@@ -303,7 +303,7 @@ var MyPopup = new popelt({
 <p class="well">
 Check: <a href="demo.html">Demo</a> &nbsp;
 <a href="https://github.com/scazzy/Popelt">Github</a><br />
-Download: <a href="demo.html">Minified</a><small>(5kb)</small> &nbsp; <a href="demo.html">Source</a>
+Download: <a href="https://github.com/scazzy/Popelt/blob/master/minified/popelt-v1.0.min.js">Minified</a><small>(5kb)</small> &nbsp; <a href="https://github.com/scazzy/Popelt/blob/master/source/popelt-v1.0-source.js">Source</a>
 </p>
 <hr/>
 
