updated keyesc name

--- a/api.html
+++ b/api.html
@@ -131,7 +131,7 @@ var MyPopup = new popelt({
 	<tr>
     	<td>modal</td>
         <td>boolean</td>
-        <td>true</td>
+        <td>false</td>
         <td><strong>true</strong> or <strong>false</strong></td>
     </tr>
     <tr>
@@ -215,7 +215,7 @@ var MyPopup = new popelt({
         <td>If want to focus on the first '<em>input</em>' or '<em>textarea</em>' when the popup is opened.</td>
     </tr>
     <tr>
-    	<td>keyEsc</td>
+    	<td>escClose</td>
         <td>boolean</td>
         <td>true</td>
         <td>Allow popup to close by pressing "Escape" or "Esc" key.</td>
