--- a/api.html
+++ b/api.html
@@ -4,7 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Popelt - Modal Popup jQuery Plugin</title>
 <link rel="stylesheet" href="css/normalize.css" />
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/popelt.css" />
+<link rel="stylesheet" href="css/demo.css" />
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="minified/popelt-v1.0.min.js"></script>
